# slick

./: CMakeLists.txt
src/: main.cpp
src/backend/: buffer_manager.cpp  buffer_manager.h  tree_walker.cpp  tree_walker.h
src/frontend/: directory_menu.cpp  directory_menu.h  main_window.cpp  main_window.h  navi_bar.cpp  navi_bar.h
src/kazbase/network/: net.cpp~  net.h~
